<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuAdd"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuUncheck"
        android:title="@string/uncheck"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuDelete"
        android:icon="@drawable/ic_delete"
        android:title="Delete All"
        app:showAsAction="always" />
</menu>