<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.qc.seclass.glm.CreateNewItem">

    <TextView
        android:id="@+id/itemType"
        android:layout_width="88dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="8dp"
        android:text="@string/item_type"
        app:layout_constraintEnd_toStartOf="@+id/type"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ItemName"
        android:layout_width="88dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="8dp"
        android:text="@string/item_name"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/type"
        android:layout_width="220dp"
        android:layout_height="41dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="220dp"
        android:layout_height="41dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newItem"
        android:layout_width="147dp"
        android:layout_height="50dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="120dp"
        android:text="@string/add_to_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Add" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="144dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:text="@string/new_item"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
